modules/vpc/main.tf
resource "aws_vpc" "main" {
  cidr_block       	= "10.0.0.0/16"
  enable_dns_hostnames = true
}
 
resource "aws_subnet" "pub_1" {
  vpc_id        	= aws_vpc.main.id
  cidr_block    	= "10.0.1.0/24"
  availability_zone = "us-east-1a"
}
 
resource "aws_subnet" "pub_2" {
  vpc_id        	= aws_vpc.main.id
  cidr_block    	= "10.0.2.0/24"
  availability_zone = "us-east-1b"
}
 
resource "aws_subnet" "priv_app" {
  vpc_id        	= aws_vpc.main.id
  cidr_block    	= "10.0.3.0/24"
  availability_zone = "us-east-1a"
}
 
resource "aws_subnet" "priv_db" {
  vpc_id        	= aws_vpc.main.id
  cidr_block    	= "10.0.4.0/24"
  availability_zone = "us-east-1b"
}
 
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
}
 
resource "aws_eip" "nat" {
  domain = "vpc"
}
 
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.pub_1.id
}
 
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route {
	cidr_block = "0.0.0.0/0"
	gateway_id = aws_internet_gateway.igw.id
  }
}
 
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
  route {
	cidr_block 	= "0.0.0.0/0"
	nat_gateway_id = aws_nat_gateway.nat.id
  }
}
 
resource "aws_route_table_association" "pub_1" {
  subnet_id      = aws_subnet.pub_1.id
  route_table_id = aws_route_table.public.id
}
 
resource "aws_route_table_association" "pub_2" {
  subnet_id      = aws_subnet.pub_2.id
  route_table_id = aws_route_table.public.id
}
 
resource "aws_route_table_association" "priv_app" {
  subnet_id      = aws_subnet.priv_app.id
  route_table_id = aws_route_table.private.id
}
 
resource "aws_route_table_association" "priv_db" {
  subnet_id      = aws_subnet.priv_db.id
  route_table_id = aws_route_table.private.id
}
